Added template.Home page fix.
